Added `Strings.fromFile(String, Consumer)`.